bk_ida/gccida/c0/build_binary_op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2379:24: error: must use 'enum' tag to refer to type 'tree_code'
tree  build_binary_op( tree_code code, tree orig_op0, tree orig_op1, int convert_p) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2381:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2383:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2384:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2385:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // [rsp+0h] [rbp-190h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2396:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *folded; // [rsp+30h] [rbp-160h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2397:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+38h] [rbp-158h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2410:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code xresultcode; // [rsp+9Ch] [rbp-F4h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2433:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code resultcode; // [rsp+13Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2436:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code1; // [rsp+150h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2437:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code0; // [rsp+154h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2443:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code codea; // [rsp+184h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:2444:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v68; // [rsp+188h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:3045:20: error: expected expression
v68 = ( tree_node *)global_trees; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/c-typeck.c:3045:9: error: use of undeclared identifier 'tree_node'
v68 = ( tree_node *)global_trees; 
        ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_binary_op/src/obj/c-typeck.o] Error 1
